--- a/style.css
+++ b/style.css
@@ -1,8 +1,17 @@
 #borderr{
-    width: 500px;
+    width: 470px;
     height: auto;
     
 }
 ul{
     list-style: none;
+}
+footer{
+    width: 550px;
+}
+h6{
+    font-size: 24px;
+}
+.mb-5{
+    font-size: 14px;
 }
