--- a/style.css
+++ b/style.css
@@ -19,7 +19,18 @@ h6{
 #next{
     background-color: #047eea;
 }
+#next:hover{
+    background-color: #0768bd;
+    box-shadow: 0px 0px 3px rgb(151, 151, 151);
+}
 #footerr{
     font-size: 12px;
+    
+    
+}
+#create{
+    color: #047eea;
+}
+@media.query{
     
 }
