--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@ h6{
 #create{
     color: #047eea;
 }
-@media.query{
-    
+
+@media(max-width: 600px) {
+    main, #borderr {
+        border-style: none;
+        width: 100%;
+    }
 }
+
